# ai-twin

./: Makefile  main.py  output.md  pyproject.toml  test.py
.github/workflows/: ci.yml
src/ai_twin/: __init__.py  config.py  run.py
src/ai_twin/data_pipeline/: __init__.py  collect_notion.yaml  pipelines.py
src/ai_twin/data_pipeline/collect_data_notion/: __init__.py  extract_notion_pages.py  extract_notion_pages_metadata.py  save_notion_pages.py
tests/: test_jokes.py
