[project]
name = "ai-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hatch>=1.14.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.4"]

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_twin"]
