[project]
name = "ai-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "hatch>=1.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "zenml[server]>=0.74.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.4"]

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_twin"]
